Fixes bug where Intro content overlaps when not enough vertical space

--- a/src/components/Intro/index.module.css
+++ b/src/components/Intro/index.module.css
@@ -41,7 +41,8 @@
 }
 
 .isFullViewport {
-  min-height: calc(85vh - var(--retune-masthead-h));
+  min-height: 400px; /* Avoids intro content overlapping vertically */
+  height: calc(85vh - var(--retune-masthead-h));
   width: 100vw;
 }
 
